# polling_voting_system

./: README.md
Project_Voting_Sys/: app.py  data.sql  netlify.toml  pyproject.toml  requirements.txt  tempCodeRunnerFile.py
Project_Voting_Sys/templates/: admin.html  admin_login.html  index.html  login.html  thanks.html  vote.html  vote_2.html
